View Issue Details

IDProjectCategoryView StatusLast Update
0028796Open CASCADEOCCT:Codingpublic2017-09-29 16:25
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2013 
Product Version7.2.0 
Target Version7.2.0Fixed in Version7.2.0 
Summary0028796: Coding Rules - fix declaration of Move constructor in NCollection_Array1
DescriptionThe Move constructor in NCollection_Array1 is declared with const argument:
  NCollection_Array1 (const NCollection_Array1&& theOther)

producing the following compilation error:
c:\occt\src\NCollection\NCollection_Array1.hxx:201: error: C3490: 'myUpperBound' cannot be modified because it is being accessed through a const object
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Relationships

child of 0028470 closedbugmaster Foundation Classes, NCollection_Array1 - add Resize() method for re-allocating array with new limits 

Activities

git

2017-05-29 12:51

administrator   ~0066714

Branch CR28796 has been created by kgv.

SHA-1: ff7c7841d7492b2b4f67c9308dcbc4516097c8d0


Detailed log of new commits:

Author: kgv
Date: Mon May 29 12:46:59 2017 +0300

    0028796: Coding Rules - fix declaration of Move constructor in NCollection_Array1

kgv

2017-05-29 12:52

developer   ~0066715

Please check compilation, regression testing is not needed.

mkv

2017-05-30 16:03

tester   ~0066886

Dear BugMaster,
Branch CR28796 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode.
SHA-1: ff7c7841d7492b2b4f67c9308dcbc4516097c8d0

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 0 (0 on master)

products component :
Linux: 64 (64 on master)
Windows: 0 (0 on master)
MacOS : 1197

mkv

2017-05-30 16:04

tester   ~0066887

Dear BugMaster,
Branch CR28796 is TESTED.

git

2017-06-02 10:45

administrator   ~0066995

Branch CR28796 has been deleted by inv.

SHA-1: ff7c7841d7492b2b4f67c9308dcbc4516097c8d0

Related Changesets

occt: master 3ae5dc81

2017-05-29 09:46:59

kgv


Committer: bugmaster Details Diff
0028796: Coding Rules - fix declaration of Move constructor in NCollection_Array1 Affected Issues
0028796
mod - src/NCollection/NCollection_Array1.hxx Diff File

Issue History

Date Modified Username Field Change
2017-05-29 12:42 kgv New Issue
2017-05-29 12:42 kgv Assigned To => kgv
2017-05-29 12:51 git Note Added: 0066714
2017-05-29 12:52 kgv Note Added: 0066715
2017-05-29 12:52 kgv Assigned To kgv => bugmaster
2017-05-29 12:52 kgv Status new => resolved
2017-05-29 12:52 kgv Status resolved => reviewed
2017-05-29 12:52 kgv Relationship added child of 0028470
2017-05-29 13:17 mkv Assigned To bugmaster => mkv
2017-05-30 16:03 mkv Note Added: 0066886
2017-05-30 16:04 mkv Note Added: 0066887
2017-05-30 16:04 mkv Assigned To mkv => bugmaster
2017-05-30 16:04 mkv Status reviewed => tested
2017-05-30 16:04 mkv Test case number => Not needed
2017-06-02 10:28 bugmaster Changeset attached => occt master 3ae5dc81
2017-06-02 10:28 bugmaster Status tested => verified
2017-06-02 10:28 bugmaster Resolution open => fixed
2017-06-02 10:45 git Note Added: 0066995
2017-09-29 16:18 aiv Fixed in Version => 7.2.0
2017-09-29 16:25 aiv Status verified => closed