0028796: Coding Rules - fix declaration of Move constructor in NCollection_Array1